# thesis_demo

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  aesthetic_camera_component.cpp  aesthetic_camera_component.h  ai_manager.cpp  ai_manager.h  circular_movement_component.cpp  circular_movement_component.h  planar_movement_component.cpp  planar_movement_component.h  shooting_component.cpp  shooting_component.h  thesis_demo.cpp  thirds_renderer.cpp  thirds_renderer.h
src/resources/meshes/: army_man_standing_scaled.mtl  beachball.mtl  block_wall.mtl  book_track.mtl  playing_cards.mtl  toon_car.mtl  tree_standee.mtl
src/resources/meshes/block_A/: beachball.blend  block.blend  block.blend1  block.mtl  block_A.blend  block_A.mtl  block_A.obj.mtl  block_H.mtl  block_wall.blend  books.blend  books.blend1  car.blend  car.blend1  playing_cards.blend  playing_cards.blend1  toon_car.blend  toon_car.blend1  tree_standee.blend  tree_standee.blend1
src/resources/meshes/skybox/: skybox.blend  skybox.blend1  skybox.mtl
src/resources/meshes/wood/: wood.mtl
src/resources/shaders/: mesh.frag  mesh.vert  thirds.frag  thirds.vert
