add_executable(thesis_demo
	aesthetic_camera_component.cpp
	aesthetic_camera_component.h
	ai_manager.cpp
	ai_manager.h
	circular_movement_component.cpp
	circular_movement_component.h
	planar_movement_component.cpp
	planar_movement_component.h
    thesis_demo.cpp
)

target_link_libraries(thesis_demo
    pixel_engine
    ${OPENGL_LIBRRIES}
    ceres
    gl3w
    glfw
    gflags
    glog
)